@@ -1,4 +1,4 @@
-/* Copyright (C) 1993, 1996, 1997, 1998, 1999 Free Software Foundation, Inc.
+/* Copyright (C) 1993, 1996-1999, 2001 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
 
    The GNU C Library is free software; you can redistribute it and/or
@@ -35,11 +35,13 @@ ungetwc (c, fp)
 {
   int result;
   CHECK_FILE (fp, WEOF);
-  if (c == WEOF)
-    return WEOF;
   _IO_cleanup_region_start ((void (*) __P ((void *))) _IO_funlockfile, fp);
   _IO_flockfile (fp);
-  result = _IO_sputbackwc (fp, c);
+  _IO_fwide (fp, 1);
+  if (c == WEOF)
+    result = WEOF;
+  else
+    result = _IO_sputbackwc (fp, c);
   _IO_funlockfile (fp);
   _IO_cleanup_region_end (0);
   return result;
