@@ -1,5 +1,9 @@
 2001-08-08  Ulrich Drepper  <drepper@redhat.com>
 
+	* libio/ioungetwc.c (ungetwc): Orient stream first.
+	* libio/Makefile (tests): Add tst-ungetwc1.
+	* libio/tst-ungetwc1.c: New file.
+
 	* libio/wfileops.c (_IO_wfile_underflow): Remove incorrect test
 	for possible conversion using __codecvt_do_in.
 	* libio/Makefile (tests): Add tst-fgetws.
